# minecraft-server-rs

./: Cargo.toml  README.md
mc/: Cargo.toml  icon.png.base64
mc/mc-packet-derive/: Cargo.toml
mc/mc-packet-derive/src/: lib.rs
mc/src/: config.rs  connection.rs  error.rs  lib.rs  packet.rs  server.rs  types.rs
mc/src/connection/: comms.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
mc/src/field/: array.rs  long.rs  mod.rs  position.rs  primitive.rs  string.rs  ushort.rs  varint.rs
mc/src/game/: message.rs  mod.rs
mc/src/packet/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
server/: Cargo.toml
server/src/: async.rs  main.rs  server.rs  sync.rs
