[package]
name = "mc"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-packet-derive = {path = "mc-packet-derive"}
log = "^0.4"
byteorder = "^1.3"
openssl = {version = "^0.10", features = ["vendored"]}
uuid = {version = "^0.8", features = ["v4"]}