[package]
name = "mc"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-packet-derive = { path = "mc-packet-derive" }
log = "^0.4"
openssl = { version = "^0.10", features = ["vendored"] }
uuid = { version = "^0.8", features = ["v4"] }
num = "^0.3"
ureq = { version = "^1.5", features = ["json"] }
chashmap = "^2.2"

async-std = "^1.6"
futures = "^0.3"
async-trait = "^0.1"

[dev-dependencies]
futures-await-test = "^0.3"
quickcheck = "^0.9"
quickcheck_macros = "^0.9"
