[package]
name = "server"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc = {path = "../mc"}
log = "^0.4"
env_logger = "^0.7"
slab = "^0.4"

async-std = "^1.5"
futures = "^0.3"
